/* Encoding: UTF-8 (No BOM)  Notation (in 5th position):
     * Change, ! Fix, % Optimization, + Addition, - Removal, ; Comment
   Entries may not always be in chronological/commit order.
   See license at the end of file. */

2026-01-12 20:35 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  + build/harbour-ssl/Makefile
    + add harbour-ssl package definition covering hbssl contrib

  * .github/workflows/macos.yml
  * .github/workflows/ubuntu-arm64.yml
  * .github/workflows/ubuntu.yml
  * .github/workflows/windows-arm64.yml
  * .github/workflows/windows.yml
    * build it.

  * build/harbour-core/patch-01
  - build/harbour-core/patch-02
    - patch unneccesery after Harbour update

2025-11-21 12:40 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * .github/workflows/macos.yml
  * .github/workflows/ubuntu-arm64.yml
  * .github/workflows/ubuntu.yml
  * .github/workflows/windows-arm64.yml
  * .github/workflows/windows.yml
    + build/harbour-core-debug/Makefile
      + added missing -DHB_TR_LEVEL_DEBUG

      * split debug version build to two, separate packages with
        included/excluded undefined behavior sanitizer

2025-11-17 21:32 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * .github/workflows/macos.yml
  * .github/workflows/ubuntu-arm64.yml
  * .github/workflows/ubuntu.yml
  * .github/workflows/windows-arm64.yml
  * .github/workflows/windows.yml
    + build/harbour-core-debug/Makefile
      + build and package debug (& non optimized) version
        of Harbour
 
  + build/harbour-core/patch-00
  + build/harbour-core/patch-01
  * harbour-core-onedir/Makefile
    * setup some tracing for WinMain - arguments missing, locating
      problems with resources in hbwin

2025-11-17 19:34 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * .github/workflows/macos.yml
  * .github/workflows/ubuntu.yml
  * .github/workflows/ubuntu-arm64.yml
  * .github/workflows/windows-arm64.yml
  * .github/workflows/windows.yml
  + build/harbour-crypto/Makefile