@@ -3,6 +3,14 @@
    Entries may not always be in chronological/commit order.
    See license at the end of file. */
 
+2026-01-12 20:56 UTC+0100 Aleksander Czajczynski (hb fki.pl)
+  * .github/workflows/macos.yml
+  * .github/workflows/ubuntu-arm64.yml
+  * .github/workflows/ubuntu.yml
+  * .github/workflows/windows-arm64.yml
+  * .github/workflows/windows.yml
+    ! expired artifact problem testfix
+
 2026-01-12 20:35 UTC+0100 Aleksander Czajczynski (hb fki.pl)
   + build/harbour-ssl/Makefile
     + add harbour-ssl package definition covering hbssl contrib
